--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="description" content="Інтерактивний AR-додаток із вікториною про Україну">
-  <meta name="keywords" content="AR, доповнена реальність, вікторина, Україна">
   <title>AR Камера — Чарівне Пригодництво!</title>
-  <!-- ✅ Виправлено: пробіли в URL -->
+  <!-- Виправлено: пробіли в URL -->
   <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
-  <!-- ✅ Виправлено: сумісна версія AR.js -->
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
   <style>
@@ -23,37 +20,19 @@
       background: transparent;
     }
     a-scene {
-      width: 100%;
-      height: 100%;
+      width: 100% !important;
+      height: 100% !important;
       position: fixed;
       top: 0;
       left: 0;
       background: transparent;
     }
 
-    /* Екран завантаження */
-    #loadingScreen {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.8);
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      z-index: 100;
-      font-size: 1.8em;
-    }
-
     /* Екран активації */
     #clickToStart {
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
       background: rgba(0, 0, 0, 0.8);
       color: white;
       display: flex;
@@ -109,23 +88,7 @@
       opacity: 0.9;
     }
 
-    /* Кнопки */
-    .btn {
-      padding: 16px 32px;
-      border: none;
-      border-radius: 30px;
-      font-size: 1.3em;
-      font-weight: bold;
-      cursor: pointer;
-      box-shadow: 0 6px 12px rgba(0,0,0,0.4);
-      z-index: 10;
-      animation: popUp 0.5s forwards;
-    }
-    @keyframes popUp {
-      from { opacity: 0; transform: scale(0.8); }
-      to { opacity: 1; transform: scale(1); }
-    }
-
+    /* Кнопка запуску */
     #playVideoBtn {
       position: fixed;
       bottom: 100px;
@@ -133,50 +96,14 @@
       transform: translateX(-50%);
       background: #4CAF50;
       color: white;
-      display: none;
-    }
-
-    #startQuizBtn {
-      position: fixed;
-      bottom: 100px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: #2196F3;
-      color: white;
-      display: none;
-    }
-
-    /* Вікторина */
-    #quizContainer {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(255, 255, 255, 0.95);
-      display: none;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      gap: 20px;
-      z-index: 100;
-      text-align: center;
-      padding: 20px;
-    }
-    #quizQuestion {
-      font-size: 1.6em;
-      color: #d10069;
+      padding: 16px 32px;
+      border-radius: 30px;
+      font-size: 1.3em;
       font-weight: bold;
-    }
-    .quizOption {
-      width: 80%;
-      max-width: 300px;
-      padding: 15px;
-      font-size: 1.2em;
-      background: #ffd700;
-      color: #333;
       border: none;
-      border-radius: 20px;
+      z-index: 10;
+      box-shadow: 0 6px 12px rgba(0,0,0,0.4);
+      display: none;
       cursor: pointer;
     }
 
@@ -200,12 +127,9 @@
 </head>
 <body>
 
-  <!-- Екран завантаження -->
-  <div id="loadingScreen">Завантаження...</div>
-
   <!-- Екран активації -->
   <div id="clickToStart">
-    <span id="clickToStartText">Клацни, щоб увімкнути чари! ✨</span><br>
+    Клацни, щоб<br>увімкнути чари! ✨<br>
     <span>👇</span>
   </div>
 
@@ -215,9 +139,8 @@
   <!-- Жовта крапка -->
   <div id="centerYellowDot"></div>
 
-  <!-- Кнопки -->
-  <button id="playVideoBtn" class="btn" aria-label="Запустити AR-відео">▶️ Запустити відео</button>
-  <button id="startQuizBtn" class="btn" aria-label="Розпочати вікторину">🎮 Грати у вікторину</button>
+  <!-- Кнопка запуску відео -->
+  <button id="playVideoBtn">▶️ Запустити відео</button>
 
   <!-- AR Сцена -->
   <a-scene embedded arjs="sourceType: webcam; detectionMode: mono; trackingMethod: best;">
@@ -237,17 +160,7 @@
 
   <!-- Посилання -->
   <a href="https://youtube.com/playlist?list=PL6UDFwT9TzFxsVdFiEBsQ9yFpcYRPOpfO&si=IyXv1SkdPyvhcW7Z" 
-     id="smartLessaBtn" target="_blank" aria-label="Перейти до YouTube SmartLessa">👉 Дивись більше на @SmartLessa</a>
-
-  <!-- Вікторина -->
-  <div id="quizContainer" role="dialog" aria-labelledby="quizQuestion">
-    <div id="quizQuestion">Питання</div>
-    <button class="quizOption" id="opt1" aria-label="Варіант 1">Варіант 1</button>
-    <button class="quizOption" id="opt2" aria-label="Варіант 2">Варіант 2</button>
-    <button class="quizOption" id="opt3" aria-label="Варіант 3">Варіант 3</button>
-    <button class="btn" onclick="restartAR()" aria-label="Повернутися до сканування">🔄 Повернутися до сканування</button>
-    <button class="btn" onclick="restartQuiz()" aria-label="Спробувати вікторину ще раз">🔄 Спробувати ще раз</button>
-  </div>
+     id="smartLessaBtn" target="_blank">👉 Дивись більше на @SmartLessa</a>
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
@@ -255,140 +168,22 @@
       const scanText = document.getElementById('scanText');
       const centerYellowDot = document.getElementById('centerYellowDot');
       const playVideoBtn = document.getElementById('playVideoBtn');
-      const startQuizBtn = document.getElementById('startQuizBtn');
       const arVideo = document.getElementById('arVideo');
       const clickToStart = document.getElementById('clickToStart');
-      const quizContainer = document.getElementById('quizContainer');
-      const loadingScreen = document.getElementById('loadingScreen');
-      const clickToStartText = document.getElementById('clickToStartText');
 
-      const state = {
-        canPlay: false,
-        isPlaying: false,
-        isQuizActive: false
-      };
+      let canPlay = false;
+      let isPlaying = false;
 
-      // Локалізація
-      const translations = {
-        uk: {
-          clickToStart: "Клацни, щоб увімкнути чари! ✨",
-          scanText: "🔍 Наведи на зображення!",
-          playVideo: "▶️ Запустити відео",
-          startQuiz: "🎮 Грати у вікторину",
-          restartAR: "🔄 Повернутися до сканування",
-          restartQuiz: "🔄 Спробувати ще раз"
-        },
-        en: {
-          clickToStart: "Click to start the magic! ✨",
-          scanText: "🔍 Point at the image!",
-          playVideo: "▶️ Play video",
-          startQuiz: "🎮 Play quiz",
-          restartAR: "🔄 Back to scanning",
-          restartQuiz: "🔄 Try again"
-        }
-      };
-      const lang = navigator.language.startsWith('uk') ? 'uk' : 'en';
-      clickToStartText.textContent = translations[lang].clickToStart;
-      scanText.textContent = translations[lang].scanText;
-      playVideoBtn.textContent = translations[lang].playVideo;
-      startQuizBtn.textContent = translations[lang].startQuiz;
-      document.querySelector('button[onclick="restartAR()"]').textContent = translations[lang].restartAR;
-      document.querySelector('button[onclick="restartQuiz()"]').textContent = translations[lang].restartQuiz;
-
-      // Вікторина
-      const quiz = [
-        { q: lang === 'uk' ? "Яка столиця України?" : "What is the capital of Ukraine?", o: ["Київ", "Львів", "Одеса"], c: 0 },
-        { q: lang === 'uk' ? "Який колір прапора України?" : "What is the color of Ukraine's flag?", o: ["Червоно-чорний", "Синьо-жовтий", "Зелено-білий"], c: 1 },
-        { q: lang === 'uk' ? "Яка найвища гора в Україні?" : "What is the highest mountain in Ukraine?", o: ["Говерла", "Роман-Кош", "Піп Іван"], c: 0 }
-      ];
-      let quizIndex = 0;
-      let quizScore = 0;
-
-      function showQuiz() {
-        console.log("🎮 Вікторина відкрита");
-        arVideo.pause();
-        arVideo.currentTime = 0;
-        state.isPlaying = false;
-        state.isQuizActive = true;
-
-        quizContainer.style.display = 'flex';
-        playVideoBtn.style.display = 'none';
-        startQuizBtn.style.display = 'none';
-        
-        quizIndex = 0;
-        quizScore = 0;
-        nextQuizQuestion();
-      }
-
-      function nextQuizQuestion() {
-        if (quizIndex < quiz.length) {
-          const q = quiz[quizIndex];
-          document.getElementById('quizQuestion').textContent = q.q;
-          document.getElementById('opt1').textContent = q.o[0];
-          document.getElementById('opt2').textContent = q.o[1];
-          document.getElementById('opt3').textContent = q.o[2];
-
-          document.getElementById('opt1').onclick = () => checkAnswer(0);
-          document.getElementById('opt2').onclick = () => checkAnswer(1);
-          document.getElementById('opt3').onclick = () => checkAnswer(2);
-        } else {
-          showQuizResult();
-        }
-      }
-
-      function checkAnswer(selected) {
-        if (selected === quiz[quizIndex].c) quizScore++;
-        quizIndex++;
-        nextQuizQuestion();
-      }
-
-      function showQuizResult() {
-        const stars = '⭐'.repeat(quizScore);
-        document.getElementById('quizQuestion').innerHTML = 
-          lang === 'uk' 
-            ? `🎉 Вітаю!<br>Ти молодець!<br>Результат: ${quizScore}/3 ${stars}`
-            : `🎉 Congratulations!<br>Well done!<br>Result: ${quizScore}/3 ${stars}`;
-        document.getElementById('opt1').style.display = 'none';
-        document.getElementById('opt2').style.display = 'none';
-        document.getElementById('opt3').style.display = 'none';
-      }
-
-      // Повторна спроба вікторини
-      window.restartQuiz = function() {
-        quizIndex = 0;
-        quizScore = 0;
-        document.getElementById('opt1').style.display = 'block';
-        document.getElementById('opt2').style.display = 'block';
-        document.getElementById('opt3').style.display = 'block';
-        nextQuizQuestion();
-      };
-
-      // Екран активації
+      // --- Екран активації ---
       clickToStart.addEventListener('click', () => {
         clickToStart.style.display = 'none';
-        state.canPlay = true;
+        canPlay = true;
       });
 
-      // Перевірка доступу до камери
-      if (!navigator.mediaDevices || !navigator.mediaDevices.getUserMedia) {
-        alert(lang === 'uk' ? "Ваш пристрій не підтримує доступ до камери." : "Your device does not support camera access.");
-        loadingScreen.style.display = 'none';
-      } else {
-        navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } })
-          .then(stream => {
-            console.log("✅ Камера доступна");
-            loadingScreen.style.display = 'none';
-          })
-          .catch(err => {
-            console.error("❌ Помилка доступу до камери:", err);
-            alert(lang === 'uk' ? "Не вдалося отримати доступ до камери. Перевірте дозволи." : "Failed to access the camera. Check permissions.");
-            loadingScreen.style.display = 'none';
-          });
-      }
-
-      // Відео: метадані завантажено
+      // --- Відео: метадані завантажено ---
       arVideo.addEventListener('loadedmetadata', () => {
         arVideo.pause();
+
         const videoWidth = arVideo.videoWidth;
         const videoHeight = arVideo.videoHeight;
         const scaleFactor = 2;
@@ -398,46 +193,32 @@
         arVideo.setAttribute('height', height);
       });
 
-      // Подія: відео готове
-      arVideo.addEventListener('canplay', () => {
-        console.log("✅ Відео готове до відтворення");
-        loadingScreen.style.display = 'none';
-      });
-
-      // Маркер знайдено
+      // --- Маркер знайдено ---
       marker.addEventListener('markerFound', () => {
         scanText.style.display = 'none';
         centerYellowDot.style.display = 'block';
 
-        if (!state.isPlaying && state.canPlay && !state.isQuizActive) {
+        if (!isPlaying && canPlay) {
           playVideoBtn.style.display = 'block';
         }
       });
 
-      // Маркер втрачено
+      // --- Маркер втрачено ---
       marker.addEventListener('markerLost', () => {
         scanText.style.display = 'block';
         centerYellowDot.style.display = 'none';
         playVideoBtn.style.display = 'none';
-        startQuizBtn.style.display = 'none';
 
-        if (state.isPlaying || !arVideo.ended) {
+        if (isPlaying || !arVideo.ended) {
           arVideo.pause();
           arVideo.currentTime = 0;
-          state.isPlaying = false;
+          isPlaying = false;
         }
       });
 
-      // Відео закінчилося
-      arVideo.addEventListener('ended', () => {
-        state.isPlaying = false;
-        playVideoBtn.style.display = 'none';
-        startQuizBtn.style.display = 'block';
-      });
-
-      // Запуск відео
-      function playVideo() {
-        if (state.isPlaying) return;
+      // --- Кнопка запуску відео ---
+      playVideoBtn.addEventListener('click', () => {
+        if (isPlaying) return;
 
         arVideo.currentTime = 0;
         const playPromise = arVideo.play();
@@ -445,56 +226,51 @@
         if (playPromise !== undefined) {
           playPromise.then(() => {
             console.log("▶️ Відео запущено");
-            state.isPlaying = true;
+            isPlaying = true;
             playVideoBtn.style.display = 'none';
 
-            // Страховка: через 20 секунд — вікторина
+            // 🔒 Страховка: через 19 секунд — скинути стан (на випадок, якщо ended не спрацює)
             setTimeout(() => {
-              if (state.isPlaying && !arVideo.ended) {
+              if (isPlaying) {
                 arVideo.pause();
                 arVideo.currentTime = 0;
-                state.isPlaying = false;
-                startQuizBtn.style.display = 'block';
+                isPlaying = false;
               }
-            }, 20000);
+            }, 19000); // 19 сек — довжина твого відео
 
           }).catch(err => {
             console.error("❌ Не вдалося запустити відео:", err);
-            alert(lang === 'uk' ? "Не вдалося запустити відео. Натисни ще раз." : "Failed to play video. Try again.");
+            alert("Не вдалося запустити відео. Натисни ще раз.");
           });
         }
-      }
+      });
 
-      // Прив’язуємо кнопки
-      playVideoBtn.addEventListener('click', playVideo);
-      startQuizBtn.addEventListener('click', showQuiz);
-
-      // Повернення до AR
-      window.restartAR = function() {
-        arVideo.pause();
+      // --- Подія: відео закінчилося ---
+      arVideo.addEventListener('ended', () => {
+        console.log("✅ Відео закінчилося");
+        isPlaying = false;
         arVideo.currentTime = 0;
-        state.isPlaying = false;
-        state.isQuizActive = false;
+      });
 
-        quizContainer.style.display = 'none';
-        document.getElementById('opt1').style.display = 'block';
-        document.getElementById('opt2').style.display = 'block';
-        document.getElementById('opt3').style.display = 'block';
-        startQuizBtn.style.display = 'none';
-        scanText.style.display = 'block';
-      };
-
-      // Фікс висоти
+      // --- Фікс висоти ---
       function fixHeight() {
         document.body.style.height = window.innerHeight + 'px';
       }
       window.addEventListener('resize', fixHeight);
       fixHeight();
 
-      // Логування
+      // --- Задня камера ---
+      AFRAME.utils.device.getCameraPermission = () => {
+        return navigator.mediaDevices.getUserMedia({
+          video: { facingMode: 'environment' }
+        });
+      };
+
+      // --- Логування ---
       arVideo.addEventListener('play', () => console.log("▶️ play"));
       arVideo.addEventListener('pause', () => console.log("⏸️ pause"));
       arVideo.addEventListener('error', e => console.error("❌ video error:", e));
+      arVideo.addEventListener('canplay', () => console.log("✅ canplay"));
     });
   </script>
 </body>
