--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>AR Камера — Чарівне Пригодництво!</title>
-  <!-- Виправлено: пробіли в URL -->
   <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
   <style>
     html, body {
       margin: 0;
@@ -16,7 +14,7 @@
       height: 100%;
       overflow: hidden;
       touch-action: none;
-      font-family: 'Comic Neue', 'Comic Sans MS', sans-serif;
+      font-family: 'Comic Sans MS', cursive, sans-serif;
       background: transparent;
     }
     a-scene {
@@ -46,11 +44,7 @@
     }
     #clickToStart span {
       display: inline-block;
-      animation: bounce 1s infinite 0.5s;
-    }
-    @keyframes bounce {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
+      animation: bounce 1s infinite;
     }
 
     /* Інструкція */
@@ -88,7 +82,23 @@
       opacity: 0.9;
     }
 
-    /* Кнопка запуску */
+    /* Кнопки */
+    .btn {
+      padding: 16px 32px;
+      border: none;
+      border-radius: 30px;
+      font-size: 1.3em;
+      font-weight: bold;
+      cursor: pointer;
+      box-shadow: 0 6px 12px rgba(0,0,0,0.4);
+      z-index: 10;
+      animation: popUp 0.5s forwards;
+    }
+    @keyframes popUp {
+      from { opacity: 0; transform: scale(0.8); }
+      to { opacity: 1; transform: scale(1); }
+    }
+
     #playVideoBtn {
       position: fixed;
       bottom: 100px;
@@ -96,14 +106,50 @@
       transform: translateX(-50%);
       background: #4CAF50;
       color: white;
-      padding: 16px 32px;
-      border-radius: 30px;
-      font-size: 1.3em;
-      font-weight: bold;
-      border: none;
-      z-index: 10;
-      box-shadow: 0 6px 12px rgba(0,0,0,0.4);
       display: none;
+    }
+
+    #startQuizBtn {
+      position: fixed;
+      bottom: 100px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #2196F3;
+      color: white;
+      display: none;
+    }
+
+    /* Вікторина */
+    #quizContainer {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(255, 255, 255, 0.95);
+      display: none;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+      z-index: 100;
+      text-align: center;
+      padding: 20px;
+    }
+    #quizQuestion {
+      font-size: 1.6em;
+      color: #d10069;
+      font-weight: bold;
+    }
+    .quizOption {
+      width: 80%;
+      max-width: 300px;
+      padding: 15px;
+      font-size: 1.2em;
+      background: #ffd700;
+      color: #333;
+      border: none;
+      border-radius: 20px;
       cursor: pointer;
     }
 
@@ -123,6 +169,11 @@
       z-index: 10;
       box-shadow: 0 6px 12px rgba(0,0,0,0.4);
     }
+
+    @keyframes bounce {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+    }
   </style>
 </head>
 <body>
@@ -139,8 +190,9 @@
   <!-- Жовта крапка -->
   <div id="centerYellowDot"></div>
 
-  <!-- Кнопка запуску відео -->
-  <button id="playVideoBtn">▶️ Запустити відео</button>
+  <!-- Кнопки -->
+  <button id="playVideoBtn" class="btn" onclick="playVideo()">▶️ Запустити відео</button>
+  <button id="startQuizBtn" class="btn" onclick="showQuiz()">🎮 Грати у вікторину</button>
 
   <!-- AR Сцена -->
   <a-scene embedded arjs="sourceType: webcam; detectionMode: mono; trackingMethod: best;">
@@ -152,7 +204,8 @@
         rotation="-90 0 0" 
         preload="none"
         muted="true"
-        playsinline>
+        loop="false"
+        playsinline> <!-- 🔹 Обов’язковий атрибут для мобільних -->
       </a-video>
     </a-marker>
     <a-entity camera></a-entity>
@@ -162,116 +215,178 @@
   <a href="https://youtube.com/playlist?list=PL6UDFwT9TzFxsVdFiEBsQ9yFpcYRPOpfO&si=IyXv1SkdPyvhcW7Z" 
      id="smartLessaBtn" target="_blank">👉 Дивись більше на @SmartLessa</a>
 
+  <!-- Вікторина -->
+  <div id="quizContainer">
+    <div id="quizQuestion">Питання</div>
+    <button class="quizOption" id="opt1">Варіант 1</button>
+    <button class="quizOption" id="opt2">Варіант 2</button>
+    <button class="quizOption" id="opt3">Варіант 3</button>
+    <button class="btn" onclick="restartAR()">🔄 Повернутися до сканування</button>
+  </div>
+
+  <!-- 🔴 Тестова кнопка (видали після перевірки) -->
+  <button onclick="showQuiz()" style="
+    position: fixed; top: 20px; left: 20px; z-index: 1000;
+    background: red; color: white; border: none; padding: 10px 15px;
+    font-size: 14px; border-radius: 10px;
+  ">🔴 Тест: Відкрити вікторину</button>
+
   <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const marker = document.getElementById('marker');
-      const scanText = document.getElementById('scanText');
-      const centerYellowDot = document.getElementById('centerYellowDot');
-      const playVideoBtn = document.getElementById('playVideoBtn');
-      const arVideo = document.getElementById('arVideo');
-      const clickToStart = document.getElementById('clickToStart');
+    const marker = document.getElementById('marker');
+    const scanText = document.getElementById('scanText');
+    const centerYellowDot = document.getElementById('centerYellowDot');
+    const playVideoBtn = document.getElementById('playVideoBtn');
+    const startQuizBtn = document.getElementById('startQuizBtn');
+    const arVideo = document.getElementById('arVideo');
+    const clickToStart = document.getElementById('clickToStart');
+    const quizContainer = document.getElementById('quizContainer');
 
-      let canPlay = false;
-      let isPlaying = false;
+    let canPlay = false;
+    let isPlaying = false;
 
-      // --- Екран активації ---
-      clickToStart.addEventListener('click', () => {
-        clickToStart.style.display = 'none';
-        canPlay = true;
-      });
+    // --- Вікторина ---
+    const quiz = [
+      { q: "Яка столиця України?", o: ["Київ", "Львів", "Одеса"], c: 0 },
+      { q: "Який колір прапора України?", o: ["Червоно-чорний", "Синьо-жовтий", "Зелено-білий"], c: 1 },
+      { q: "Яка найвища гора в Україні?", o: ["Говерла", "Роман-Кош", "Піп Іван"], c: 0 }
+    ];
+    let quizIndex = 0;
+    let quizScore = 0;
 
-      // --- Відео: метадані завантажено ---
-      arVideo.addEventListener('loadedmetadata', () => {
-        arVideo.pause();
+    function showQuiz() {
+      console.log("🎮 Вікторина відкрита");
+      quizContainer.style.display = 'flex';
+      playVideoBtn.style.display = 'none';
+      startQuizBtn.style.display = 'none';
+      quizIndex = 0;
+      quizScore = 0;
+      nextQuizQuestion();
+    }
 
-        const videoWidth = arVideo.videoWidth;
-        const videoHeight = arVideo.videoHeight;
-        const scaleFactor = 2;
-        const height = (videoHeight / 100) * scaleFactor;
-        const width = (videoWidth / videoHeight) * height;
-        arVideo.setAttribute('width', width);
-        arVideo.setAttribute('height', height);
-      });
+    function nextQuizQuestion() {
+      if (quizIndex < quiz.length) {
+        const q = quiz[quizIndex];
+        document.getElementById('quizQuestion').textContent = q.q;
+        document.getElementById('opt1').textContent = q.o[0];
+        document.getElementById('opt2').textContent = q.o[1];
+        document.getElementById('opt3').textContent = q.o[2];
 
-      // --- Маркер знайдено ---
-      marker.addEventListener('markerFound', () => {
-        scanText.style.display = 'none';
-        centerYellowDot.style.display = 'block';
-
-        if (!isPlaying && canPlay) {
-          playVideoBtn.style.display = 'block';
-        }
-      });
-
-      // --- Маркер втрачено ---
-      marker.addEventListener('markerLost', () => {
-        scanText.style.display = 'block';
-        centerYellowDot.style.display = 'none';
-        playVideoBtn.style.display = 'none';
-
-        if (isPlaying || !arVideo.ended) {
-          arVideo.pause();
-          arVideo.currentTime = 0;
-          isPlaying = false;
-        }
-      });
-
-      // --- Кнопка запуску відео ---
-      playVideoBtn.addEventListener('click', () => {
-        if (isPlaying) return;
-
-        arVideo.currentTime = 0;
-        const playPromise = arVideo.play();
-
-        if (playPromise !== undefined) {
-          playPromise.then(() => {
-            console.log("▶️ Відео запущено");
-            isPlaying = true;
-            playVideoBtn.style.display = 'none';
-
-            // 🔒 Страховка: через 19 секунд — скинути стан (на випадок, якщо ended не спрацює)
-            setTimeout(() => {
-              if (isPlaying) {
-                arVideo.pause();
-                arVideo.currentTime = 0;
-                isPlaying = false;
-              }
-            }, 19000); // 19 сек — довжина твого відео
-
-          }).catch(err => {
-            console.error("❌ Не вдалося запустити відео:", err);
-            alert("Не вдалося запустити відео. Натисни ще раз.");
-          });
-        }
-      });
-
-      // --- Подія: відео закінчилося ---
-      arVideo.addEventListener('ended', () => {
-        console.log("✅ Відео закінчилося");
-        isPlaying = false;
-        arVideo.currentTime = 0;
-      });
-
-      // --- Фікс висоти ---
-      function fixHeight() {
-        document.body.style.height = window.innerHeight + 'px';
+        document.getElementById('opt1').onclick = () => checkAnswer(0);
+        document.getElementById('opt2').onclick = () => checkAnswer(1);
+        document.getElementById('opt3').onclick = () => checkAnswer(2);
+      } else {
+        showQuizResult();
       }
-      window.addEventListener('resize', fixHeight);
-      fixHeight();
+    }
 
-      // --- Задня камера ---
-      AFRAME.utils.device.getCameraPermission = () => {
-        return navigator.mediaDevices.getUserMedia({
-          video: { facingMode: 'environment' }
-        });
-      };
+    function checkAnswer(selected) {
+      if (selected === quiz[quizIndex].c) quizScore++;
+      quizIndex++;
+      nextQuizQuestion();
+    }
 
-      // --- Логування ---
-      arVideo.addEventListener('play', () => console.log("▶️ play"));
-      arVideo.addEventListener('pause', () => console.log("⏸️ pause"));
-      arVideo.addEventListener('error', e => console.error("❌ video error:", e));
-      arVideo.addEventListener('canplay', () => console.log("✅ canplay"));
+    function showQuizResult() {
+      const stars = '⭐'.repeat(quizScore);
+      document.getElementById('quizQuestion').innerHTML = 
+        `🎉 Вітаю!<br>Ти молодець!<br>Результат: ${quizScore}/3 ${stars}`;
+      document.getElementById('opt1').style.display = 'none';
+      document.getElementById('opt2').style.display = 'none';
+      document.getElementById('opt3').style.display = 'none';
+    }
+
+    // --- Події ---
+
+    clickToStart.addEventListener('click', () => {
+      clickToStart.style.display = 'none';
+      canPlay = true;
     });
+
+    arVideo.addEventListener('loadedmetadata', () => {
+      console.log("📽️ Відео метадані завантажено");
+      arVideo.pause();
+
+      const videoWidth = arVideo.videoWidth;
+      const videoHeight = arVideo.videoHeight;
+      const scaleFactor = 2;
+      const height = (videoHeight / 100) * scaleFactor;
+      const width = (videoWidth / videoHeight) * height;
+      arVideo.setAttribute('width', width);
+      arVideo.setAttribute('height', height);
+    });
+
+    marker.addEventListener('markerFound', () => {
+      scanText.style.display = 'none';
+      centerYellowDot.style.display = 'block';
+      if (!isPlaying && canPlay && quizContainer.style.display !== 'flex') {
+        playVideoBtn.style.display = 'block';
+      }
+    });
+
+    marker.addEventListener('markerLost', () => {
+      scanText.style.display = 'block';
+      centerYellowDot.style.display = 'none';
+      playVideoBtn.style.display = 'none';
+      startQuizBtn.style.display = 'none';
+      if (!arVideo.ended) arVideo.pause();
+    });
+
+    // --- 🔔 Головна зміна: страховка + логування ---
+    arVideo.addEventListener('ended', () => {
+      console.log("✅ Відео закінчилося — вікторина активована");
+      isPlaying = false;
+      playVideoBtn.style.display = 'none';
+      startQuizBtn.style.display = 'block';
+    });
+
+    function playVideo() {
+      if (isPlaying) return;
+
+      arVideo.currentTime = 0;
+      arVideo.play().then(() => {
+        console.log("▶️ Відео запущено");
+        isPlaying = true;
+
+        // 🔒 Страховка: через 19 секунд — вікторина
+        setTimeout(() => {
+          if (isPlaying) {
+            console.log("⏰ Страховка: вікторина через 19 сек");
+            isPlaying = false;
+            playVideoBtn.style.display = 'none';
+            startQuizBtn.style.display = 'block';
+          }
+        }, 19000);
+
+      }).catch(err => {
+        console.error("❌ Не вдалося відтворити відео:", err);
+        alert("Не вдалося запустити відео. Натисни ще раз.");
+      });
+    }
+
+    function restartAR() {
+      quizContainer.style.display = 'none';
+      document.getElementById('opt1').style.display = 'block';
+      document.getElementById('opt2').style.display = 'block';
+      document.getElementById('opt3').style.display = 'block';
+      startQuizBtn.style.display = 'none';
+      scanText.style.display = 'block';
+    }
+
+    function fixHeight() {
+      document.body.style.height = window.innerHeight + 'px';
+    }
+    window.addEventListener('resize', fixHeight);
+    fixHeight();
+
+    AFRAME.utils.device.getCameraPermission = () => {
+      return navigator.mediaDevices.getUserMedia({
+        video: { facingMode: 'environment' }
+      });
+    };
+
+    // 🔔 Логування для діагностики
+    arVideo.addEventListener('play', () => console.log("▶️ play"));
+    arVideo.addEventListener('pause', () => console.log("⏸️ pause"));
+    arVideo.addEventListener('error', e => console.error("❌ error:", e));
   </script>
 </body>
 </html>
